kubernetes/apps/glance/glance/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance-glance
  annotations:
    reloader.stakater.com/auto: "false"
    glance/icon: si:glance
spec:
  template:
    metadata:
      name: glance-glance
    spec:
      containers:
        - name: glance
          image: glanceapp/glance:v0.8.6
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: &config glance-config
              mountPath: /app/config/glance.yml
              subPath: glance.yml
              readOnly: true
            - name: *config
              mountPath: /app/config/config.yml
              subPath: config.yml
              readOnly: true
            - name: *config
              mountPath: /app/config/page-home.yml
              subPath: page-home.yml
              readOnly: true
            - name: *config
              mountPath: /app/config/page-news.yml
              subPath: page-news.yml
              readOnly: true
            - name: *config
              mountPath: /app/config/page-uit.yml
              subPath: page-uit.yml
              readOnly: true
            - name: &assets glance-assets
              mountPath: /app/assets/
          startupProbe: &health
            httpGet:
              path: /api/healthz
              port: 8080
            periodSeconds: 5
            failureThreshold: 10
          readinessProbe:
            <<: *health
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            <<: *health
            periodSeconds: 10
            failureThreshold: 3
      volumes:
        - name: *config
          configMap:
            name: *config
            defaultMode: 0444
        - name: *assets
          persistentVolumeClaim:
            claimName: *assets
  selector: {}
