kubernetes/apps/glance/glance/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance-http
spec:
  parentRefs:
    - &gateway
      name: default
      sectionName: http-wildcard
      namespace: istio-system
    - <<: *gateway
      sectionName: http-wildcard-local
  hostnames:
    - glance.${PUBLIC_DOMAIN}
    - glance.${LOCAL_DOMAIN}
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance-https
spec:
  parentRefs:
    - &gateway
      name: default
      sectionName: https-wildcard
      namespace: istio-system
    - <<: *gateway
      sectionName: https-wildcard-local
  hostnames:
    - glance.${PUBLIC_DOMAIN}
    - glance.${LOCAL_DOMAIN}
  rules:
    - backendRefs:
        - name: glance-glance
          port: 8080
